# ABinbev-teste-Rodney

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  README.md  database.py  main.py  pyproject.toml
backend/auth/: __init__.py  routes.py  utils.py
backend/cart/: routes.py
backend/models/: input.py  output.py
backend/orders/: routes.py
backend/products/: routes.py  utils.py
backend/tests/: test_auth.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.js  AuthContext.js  api.js
frontend/src/components/: AdminComponent.js  AdminRoute.js  Cart.js  Login.js  MainPage.js  Order.js  PrivateRoute.js  Products.js  Register.js
frontend/src/context/: AuthContext.js
